--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>fetch food</title>
     <link rel="stylesheet" href="./styles.css" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&amp;display=swap"
       rel="stylesheet"
     />
@@ -29,8 +36,9 @@
             <a href="#" class="nav-links">contact <span></span></a>
           </li>
         </ul>
+        <i class="fas fa-close close"></i>
       </nav>
-      <i class="fas fa-home menu-bar">icon</i>
+      <i class="fas fa-bars menu-bar"></i>
     </div>
     <section class="section-center">
       <h2 class="title">food catalogue</h2>
