coded the about/contact page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fetch food</title>
+    <title>Foodie || Home</title>
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
@@ -21,23 +21,22 @@
   <body>
     <div class="nav-header">
       <h1 class="logo">Company logo</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="#" class="nav-links">home <span></span></a>
-          </li>
-          <li>
-            <a href="#" class="nav-links">recipe <span></span></a>
-          </li>
-          <li>
-            <a href="#" class="nav-links">about <span></span></a>
-          </li>
-          <li>
-            <a href="#" class="nav-links">contact <span></span></a>
-          </li>
-        </ul>
-        <i class="fas fa-close close"></i>
-      </nav>
+      <div class="nav-container">
+        <nav>
+          <ul>
+            <li>
+              <a href="./index.html" class="nav-links">home <span></span></a>
+            </li>
+            <li>
+              <a href="./recipe.html" class="nav-links">recipe <span></span></a>
+            </li>
+            <li>
+              <a href="./about.html" class="nav-links">about <span></span></a>
+            </li>
+          </ul>
+          <i class="fas fa-close close"></i>
+        </nav>
+      </div>
       <i class="fas fa-bars menu-bar"></i>
     </div>
     <section class="section-center">
@@ -125,7 +124,7 @@
           </p>
         </div>
         <div class="food-container">
-          <img src="./images/item-5.jpeg" class="img" alt="tunde" />
+          <img src="./images/item-2.jpeg" class="img" alt="tunde" />
           <h2 class="food-title">Title</h2>
           <p class="desc">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
@@ -138,7 +137,7 @@
           </p>
         </div>
         <div class="food-container">
-          <img src="./images/item-6.jpeg" class="img" alt="tunde" />
+          <img src="./images/item-1.jpeg" class="img" alt="tunde" />
           <h2 class="food-title">Title</h2>
           <p class="desc">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
@@ -151,7 +150,7 @@
           </p>
         </div>
         <div class="food-container">
-          <img src="./images/item-7.jpg" class="img" alt="food item" />
+          <img src="./images/item-6.jpeg" class="img" alt="food item" />
           <h2 class="food-title">Title</h2>
           <p class="desc">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, fugit
@@ -170,7 +169,10 @@
     </section>
 
     <footer class="footer">
-      <p>&copy; <span class="year"></span> || Adeniyi Babatunde</p>
+      <p>
+        Lorem ipsum dolor sit amet. &copy; <span class="year"></span> || Adeniyi
+        Babatunde
+      </p>
     </footer>
 
     <script src="./app.js"></script>
