added search bar

--- a/about.html
+++ b/about.html
@@ -27,9 +27,6 @@
             <a href="./index.html" class="nav-links">home <span></span></a>
           </li>
           <li>
-            <a href="./recipe.html" class="nav-links">recipe <span></span></a>
-          </li>
-          <li>
             <a href="./about.html" class="nav-links">about <span></span></a>
           </li>
         </ul>
@@ -37,7 +34,7 @@
       </nav>
       <i class="fas fa-bars menu-bar"></i>
     </div>
-    <section class="section-center">
+    <section class="section-center contact-section">
       <article class="sub-section">
         <h1 class="title">about</h1>
         <p class="content">
