added preloader to search functionality

--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
           <input
             type="text"
             class="search-box"
-            placeholder="Search by recipe e.g, rice, beans"
+            placeholder="Search by recipe e.g, rice, sugar"
           />
           <button type="submit" class="search-btn">search</button>
         </form>
       </div>
       <div class="container">
+        <!-- hard coded content -->
+
         <!-- <div class="food-container">
           <img src="./images/item-1.jpeg" class="img" alt="food item" />
           <h2 class="food-title">Title</h2>
@@ -171,9 +173,12 @@
             temporibus!
           </p>
         </div> -->
-        <div class="preloader">
-          <img src="./images/pre-loader.svg" alt="preloader" />
-        </div>
+        <section class="waiting">
+          <div class="preloader">
+            <img src="./images/pre-loader.svg" alt="preloader" />
+          </div>
+          <p class="waiting-text">waiting for results...</p>
+        </section>
       </div>
     </section>
 
