modified the front page to fetch randomly

--- a/about.html
+++ b/about.html
@@ -78,6 +78,29 @@
           </div>
         </div>
       </article>
+      <!-- <article class="sub-section">
+        <form class="contact-form">
+          <div class="form-group">
+            <label for="name">name</label>
+            <input type="text" name="name" id="name" required />
+          </div>
+          <div class="form-group">
+            <label for="email">email</label>
+            <input type="text" name="name" id="email" required />
+          </div>
+          <div class="form-group">
+            <label for="message">message</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <button type="submit">submit</button>
+          <div id="status">success</div>
+        </form>
+      </article> -->
     </section>
 
     <footer class="footer">
