modified search functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <div class="nav-header">
-      <h1 class="logo">Company logo</h1>
+      <a href="./index.html">
+        <h1 class="logo">Company logo</h1>
+      </a>
       <div class="nav-container">
         <nav>
           <ul>
@@ -49,6 +51,8 @@
           <button type="submit" class="search-btn">search</button>
         </form>
       </div>
+
+      <p class="search-result-text"></p>
       <div class="container">
         <!-- hard coded content -->
 
