added leave a message section

--- a/about.html
+++ b/about.html
@@ -78,15 +78,16 @@
           </div>
         </div>
       </article>
-      <!-- <article class="sub-section">
+      <article class="sub-section">
+        <h1 class="title">Leave a message</h1>
         <form class="contact-form">
           <div class="form-group">
-            <label for="name">name</label>
+            <label for="name">fullname</label>
             <input type="text" name="name" id="name" required />
           </div>
           <div class="form-group">
             <label for="email">email</label>
-            <input type="text" name="name" id="email" required />
+            <input type="email" name="name" id="email" required />
           </div>
           <div class="form-group">
             <label for="message">message</label>
@@ -95,12 +96,13 @@
               id="message"
               cols="30"
               rows="10"
+              required
             ></textarea>
           </div>
-          <button type="submit">submit</button>
-          <div id="status">success</div>
+          <button type="submit" class="submit-btn">submit</button>
+          <div id="status" class="form-success">message delivered</div>
         </form>
-      </article> -->
+      </article>
     </section>
 
     <footer class="footer">
