--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <input
             type="text"
             class="search-box"
-            placeholder="Search by recipe e.g, rice, sugar"
+            placeholder="Search by meal e.g, rice, beans"
           />
           <button type="submit" class="search-btn">search</button>
         </form>
