--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&amp;display=swap"
       rel="stylesheet"
@@ -21,7 +27,7 @@
   <body>
     <div class="nav-header">
       <a href="./index.html">
-        <h1 class="logo">Company logo</h1>
+        <h1 class="logo">Foodie</h1>
       </a>
       <div class="nav-container">
         <nav>
