--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@
       </p>
     </footer>
     <!-- <script src="./app.js"></script> -->
-    <script src="./form.js"></script>
+    <script src="./about.js"></script>
+    <!-- <script src="./form.js"></script> -->
   </body>
 </html>
