--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <input
             type="text"
             class="search-box"
-            placeholder="Search by meal e.g, rice, beans"
+            placeholder="Search by meal e.g, rice, parfait"
           />
           <button type="submit" class="search-btn">search</button>
         </form>
@@ -199,6 +199,5 @@
     </footer>
 
     <script src="./app.js"></script>
-    <script src="./search.js"></script>
   </body>
 </html>
