modified title styling

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     </div>
     <section class="section-center contact-section">
       <article class="sub-section">
-        <h1 class="title">about</h1>
+        <h1 class="title">about us</h1>
         <p class="content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iste
           rerum debitis sint sed, velit veniam cupiditate voluptas. Maiores nemo
