modified search box

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <input
             type="text"
             class="search-box"
-            placeholder="Search by meal e.g, rice, parfait"
+            placeholder="...e.g, rice, parfait"
           />
           <button type="submit" class="search-btn">search</button>
         </form>
