--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
 
             <li>
-              <a href="./about.html" class="nav-links">about <span></span></a>
+              <a href="./about" class="nav-links">about <span></span></a>
             </li>
           </ul>
           <i class="fas fa-close close"></i>
