removed page file extension

--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
       <nav>
         <ul>
           <li>
-            <a href="./index.html" class="nav-links">home <span></span></a>
+            <a href="./index" class="nav-links">home <span></span></a>
           </li>
           <li>
-            <a href="./about.html" class="nav-links">about <span></span></a>
+            <a href="./about" class="nav-links">about <span></span></a>
           </li>
         </ul>
         <i class="fas fa-close close"></i>
