--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   </head>
   <body>
     <div class="nav-header">
-      <a href="./index.html">
+      <a href="./index">
         <h1 class="logo">Foodie</h1>
       </a>
       <div class="nav-container">
         <nav>
           <ul>
             <li>
-              <a href="./index.html" class="nav-links">home <span></span></a>
+              <a href="./index" class="nav-links">home <span></span></a>
             </li>
 
             <li>
