--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
     </section>
 
     <footer class="footer">
-      <p>
-        Lorem sit amet. &copy; <span class="year"></span> || Adeniyi Babatunde
-      </p>
+      <p>Copyright &copy; 2021 Adeniyi Babatunde</p>
     </footer>
 
     <script src="./app.js"></script>
