edited about content

--- a/about.html
+++ b/about.html
@@ -44,17 +44,18 @@
       <article class="sub-section">
         <h1 class="title">about us</h1>
         <p class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iste
-          rerum debitis sint sed, velit veniam cupiditate voluptas. Maiores nemo
-          quos, voluptates aliquid corrupti alias est exercitationem, impedit
-          sapiente fugit, architecto consequatur dolore aspernatur quibusdam
-          distinctio non odio. Ullam voluptatem eaque, doloribus odit accusamus
-          mollitia quod aut expedita hic quo. Lorem, ipsum dolor sit amet
-          consectetur adipisicing elit. Dolor sed saepe excepturi accusamus
-          deleniti dolore iure quasi, tempore unde, reprehenderit sunt commodi
-          optio nostrum. Veniam quo doloribus modi cupiditate deleniti eum
-          laudantium mollitia rerum, porro harum ut id rem eius facilis. Non,
-          aspernatur maxime neque qui omnis repellat in ea?
+          This is a dormy text, lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Facere iste rerum debitis sint sed, velit veniam
+          cupiditate voluptas. Maiores nemo quos, voluptates aliquid corrupti
+          alias est exercitationem, impedit sapiente fugit, architecto
+          consequatur dolore aspernatur quibusdam distinctio non odio. Ullam
+          voluptatem eaque, doloribus odit accusamus mollitia quod aut expedita
+          hic quo. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Dolor sed saepe excepturi accusamus deleniti dolore iure quasi,
+          tempore unde, reprehenderit sunt commodi optio nostrum. Veniam quo
+          doloribus modi cupiditate deleniti eum laudantium mollitia rerum,
+          porro harum ut id rem eius facilis. Non, aspernatur maxime neque qui
+          omnis repellat in ea?
         </p>
       </article>
       <article class="sub-section">
@@ -72,15 +73,15 @@
               <i class="far fa-address-book"></i>
             </div>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Voluptatem, vero.
+              This is a dormy text lorem ipsum dolor, sit amet consectetur
+              adipisicing elit
             </p>
           </div>
           <div class="contact-box">
             <div class="btn">
               <i class="far fa-envelope"></i>
             </div>
-            <p>testemail@email.com</p>
+            <p>testmail@email.com</p>
           </div>
         </div>
       </article>
