added back-to-top button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
   </head>
   <body>
-    <div class="nav-header">
+    <div class="nav-header" id="top">
       <a href="./index">
         <h1 class="logo">Foodie</h1>
       </a>
@@ -192,6 +192,8 @@
         </section>
       </div>
     </section>
+
+    <a href="#top" class="top"><i class="fas fa-arrow-up"></i></a>
 
     <footer class="footer">
       <p>Copyright &copy; 2021 Adeniyi Babatunde</p>
