--- a/index.html
+++ b/index.html
@@ -184,12 +184,16 @@
             temporibus!
           </p>
         </div> -->
+
         <section class="waiting">
           <div class="preloader">
             <img src="./images/pre-loader.svg" alt="preloader" />
           </div>
           <p class="waiting-text">waiting for results...</p>
         </section>
+      </div>
+      <div>
+        <button class="load-more-btn">Load more</button>
       </div>
     </section>
 
