--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
           </div>
           <div class="form-group">
             <label for="email">email</label>
-            <input type="email" name="name" id="email" required />
+            <input type="email" name="email" id="email" required />
           </div>
           <div class="form-group">
             <label for="message">message</label>
