added banner section

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foodie || About</title>
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
@@ -44,7 +45,7 @@
       <article class="sub-section">
         <h1 class="title">about us</h1>
         <p class="content">
-          This is a dormy text, this is a dormy text, This is a dormy text,
+          This is a dormy text, this is a dormy text, this is a dormy text,
           lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iste
           rerum debitis sint sed, velit veniam cupiditate voluptas. Maiores nemo
           quos, voluptates aliquid corrupti alias est exercitationem, impedit
