--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       </div>
       <i class="fas fa-bars menu-bar"></i>
     </div>
+    <section class="banner">
+      <h1 class="catch-phrase">
+        Are you ready for some <br />
+        mouth watery recipes?
+      </h1>
+      <button class="explore-btn">Explore &#8594;</button>
+    </section>
     <section class="section-center">
       <div class="catalogue-title">
         <h2 class="title">food catalogue</h2>
