modified load more functionality

--- a/index.html
+++ b/index.html
@@ -68,130 +68,6 @@
 
       <p class="search-result-text"></p>
       <div class="container">
-        <!-- hard coded content -->
-
-        <!-- <div class="food-container">
-          <img src="./images/item-1.jpeg" class="img" alt="food item" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
-            excepturi maiores voluptatem qui adipisci, repellat sequi fugit nemo
-            veniam ea laudantium quia doloremque consequatur distinctio
-            molestias neque similique dolor perspiciatis laborum illo quam
-            numquam minima. Consectetur ex, quos molestiae facere perspiciatis
-            eos qui neque culpa. Explicabo veniam eos beatae voluptatibus
-            assumenda nemo ut, reprehenderit id ipsam totam, culpa placeat
-            optio.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-2.jpeg" class="img" alt="tunde" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-            voluptas eveniet sequi totam neque eum, dolorum accusantium unde
-            vero modi officia amet iusto soluta blanditiis, consequuntur aperiam
-            distinctio rem laborum. Magnam, aut, accusamus ab quibusdam eum
-            distinctio veritatis voluptate perspiciatis sapiente vero facere
-            molestias reiciendis aspernatur. Dolor, voluptatibus dolorum
-            repellat odio repellendus placeat ab aliquid et, libero dicta
-            expedita nesciunt.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-4.jpeg" class="img" alt="tunde" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-            pariatur repellat at aliquid fugit doloremque quae perferendis,
-            architecto officiis, quas optio consequuntur quaerat saepe possimus,
-            unde rem cupiditate ea tempore earum ipsum ab rerum mollitia illo?
-            Ab, quibusdam tenetur consectetur architecto officia porro! Quod
-            ratione impedit cumque ullam provident doloremque amet! Sunt
-            repellendus saepe iusto tenetur fugit, impedit animi est.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-5.jpeg" class="img" alt="tunde" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptatibus laudantium velit quos rerum quisquam excepturi, ut
-            ducimus ratione maiores provident maxime quam suscipit ipsum modi
-            accusantium ea distinctio perspiciatis! Nisi ex libero animi fugiat
-            blanditiis iste consectetur ratione dignissimos nihil officiis
-            sapiente sit accusamus, at velit incidunt nemo atque soluta
-            obcaecati! Molestias itaque voluptas dolores odio voluptates nostrum
-            non amet?
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-6.jpeg" class="img" alt="tunde" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            tempora sit dolores debitis earum iste adipisci quod, tenetur
-            deleniti nesciunt, suscipit nostrum reiciendis dolorum amet nam
-            aliquid id ipsum minima quae molestias! Commodi beatae natus cum
-            eius eveniet nesciunt ratione, laboriosam voluptatibus ipsam nihil
-            voluptas in dicta nam deserunt nisi illum perspiciatis, est aliquid
-            odio cumque qui praesentium quas impedit.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-7.jpg" class="img" alt="food item" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            tempora sit dolores debitis earum iste adipisci quod, tenetur
-            deleniti nesciunt, suscipit nostrum reiciendis dolorum amet nam
-            aliquid id ipsum minima quae molestias! Commodi beatae natus cum
-            eius eveniet nesciunt ratione, laboriosam voluptatibus ipsam nihil
-            voluptas in dicta nam deserunt nisi illum perspiciatis, est aliquid
-            odio cumque qui praesentium quas impedit.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-2.jpeg" class="img" alt="tunde" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            tempora sit dolores debitis earum iste adipisci quod, tenetur
-            deleniti nesciunt, suscipit nostrum reiciendis dolorum amet nam
-            aliquid id ipsum minima quae molestias! Commodi beatae natus cum
-            eius eveniet nesciunt ratione, laboriosam voluptatibus ipsam nihil
-            voluptas in dicta nam deserunt nisi illum perspiciatis, est aliquid
-            odio cumque qui praesentium quas impedit.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-1.jpeg" class="img" alt="tunde" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            tempora sit dolores debitis earum iste adipisci quod, tenetur
-            deleniti nesciunt, suscipit nostrum reiciendis dolorum amet nam
-            aliquid id ipsum minima quae molestias! Commodi beatae natus cum
-            eius eveniet nesciunt ratione, laboriosam voluptatibus ipsam nihil
-            voluptas in dicta nam deserunt nisi illum perspiciatis, est aliquid
-            odio cumque qui praesentium quas impedit.
-          </p>
-        </div>
-        <div class="food-container">
-          <img src="./images/item-6.jpeg" class="img" alt="food item" />
-          <h2 class="food-title">Title</h2>
-          <p class="desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, fugit
-            architecto fugiat ea, commodi sunt, beatae eius harum delectus
-            doloremque recusandae! Minima consectetur praesentium asperiores
-            odit necessitatibus! Totam nisi, esse aliquid ea nesciunt
-            accusantium consequuntur modi voluptates quia dolore velit, quod cum
-            quas suscipit illo odit praesentium incidunt maiores accusamus quae
-            voluptatem facere temporibus ut porro. Asperiores earum veniam
-            temporibus!
-          </p>
-        </div> -->
-
         <section class="waiting">
           <div class="preloader">
             <img src="./images/pre-loader.svg" alt="preloader" />
@@ -200,14 +76,17 @@
         </section>
       </div>
       <div>
-        <button class="load-more-btn">Load more</button>
+        <button class="load-more-btn">Load Random</button>
       </div>
     </section>
 
     <a href="#top" class="top"><i class="fas fa-arrow-up"></i></a>
 
     <footer class="footer">
-      <p>Copyright &copy; 2021 Adeniyi Babatunde</p>
+      <p>
+        &copy; <span class="footer-year"></span>
+        <a href="mailto:babatundeben110@gmail.com">Babatunde Adeniyi</a>
+      </p>
     </footer>
 
     <script src="./app.js"></script>
