added footer icons

--- a/about.html
+++ b/about.html
@@ -45,18 +45,17 @@
       <article class="sub-section">
         <h1 class="title">about us</h1>
         <p class="content">
-          This is a dormy text, this is a dormy text, this is a dormy text,
-          lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iste
-          rerum debitis sint sed, velit veniam cupiditate voluptas. Maiores nemo
-          quos, voluptates aliquid corrupti alias est exercitationem, impedit
-          sapiente fugit, architecto consequatur dolore aspernatur quibusdam
-          distinctio non odio. Ullam voluptatem eaque, doloribus odit accusamus
-          mollitia quod aut expedita hic quo. Lorem, ipsum dolor sit amet
-          consectetur adipisicing elit. Dolor sed saepe excepturi accusamus
-          deleniti dolore iure quasi, tempore unde, reprehenderit sunt commodi
-          optio nostrum. Veniam quo doloribus modi cupiditate deleniti eum
-          laudantium mollitia rerum, porro harum ut id rem eius facilis. Non,
-          aspernatur maxime neque qui omnis repellat in ea?
+          A food catalogue that displays food items, including their name,
+          image, other description and recipes. It has an advance functionality
+          whereby users can search for food items of their choice.
+        </p>
+        <p class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+          libero animi eaque similique recusandae cumque magni cupiditate fuga
+          possimus odio molestiae beatae enim voluptates nulla repellat, quos
+          est iusto eum eveniet. Iusto unde cupiditate nobis nulla quisquam odit
+          repellendus temporibus quam, debitis aspernatur nisi provident
+          impedit? Tenetur sint et ex.
         </p>
       </article>
       <article class="sub-section">
@@ -66,23 +65,20 @@
             <div class="btn">
               <i class="fas fa-mobile-alt"></i>
             </div>
-            <p>+123 888 888 888</p>
+            <p>+234 9072583081</p>
           </div>
 
           <div class="contact-box">
             <div class="btn">
               <i class="far fa-address-book"></i>
             </div>
-            <p>
-              This is a dormy text lorem ipsum dolor, sit amet consectetur
-              adipisicing elit
-            </p>
+            <p>Lagos, Nigeria.</p>
           </div>
           <div class="contact-box">
             <div class="btn">
               <i class="far fa-envelope"></i>
             </div>
-            <p>testmail@email.com</p>
+            <p>babatundeben110@gmail.com</p>
           </div>
         </div>
       </article>
