--- a/index.html
+++ b/index.html
@@ -83,6 +83,29 @@
     <a href="#top" class="top"><i class="fas fa-arrow-up"></i></a>
 
     <footer class="footer">
+      <div class="footer-social">
+        <a
+          href="https://linkedin.com/in/babatundeadeniyi"
+          class="footer-links"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+
+        <a
+          href="mailto:babatundeben110@gmail.com"
+          class="footer-links"
+          target="_blank"
+        >
+          <i class="fa-regular fa-envelope"></i>
+        </a>
+        <a href="#" class="footer-links">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="footer-links">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
       <p>
         &copy; <span class="footer-year"></span>
         <a href="mailto:babatundeben110@gmail.com">Babatunde Adeniyi</a>
