--- a/about.html
+++ b/about.html
@@ -114,7 +114,33 @@
     </section>
 
     <footer class="footer">
-      <p>Copyright &copy; 2021 Adeniyi Babatunde</p>
+      <div class="footer-social">
+        <a
+          href="https://linkedin.com/in/babatundeadeniyi"
+          class="footer-links"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+
+        <a
+          href="mailto:babatundeben110@gmail.com"
+          class="footer-links"
+          target="_blank"
+        >
+          <i class="fa-regular fa-envelope"></i>
+        </a>
+        <a href="#" class="footer-links">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="footer-links">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+      <p>
+        &copy; <span class="footer-year"></span>
+        <a href="mailto:babatundeben110@gmail.com">Babatunde Adeniyi</a>
+      </p>
     </footer>
     <!-- <script src="./app.js"></script> -->
     <script src="./about.js"></script>
